--- a/MyCSS_Grid/css/styles.css
+++ b/MyCSS_Grid/css/styles.css
@@ -4,40 +4,32 @@ body {
 
 .container {
   display: grid;
-/* ２列３行 */
-  /* grid-template-columns: 100px 100px;
-  grid-template-rows: 100px 100px 100px; */
-  
-/* ３列２行 */
-  /* grid-template-columns: 100px 100px 100px;
-  grid-template-rows: 100px 100px; */
 
-/* 4個並べる */
-  /* grid-template-columns: repeat(4, 100px);
-  grid-template-rows: 100px 100px; */
+  grid-template-columns: repeat(3, 100px);
+  grid-template-rows: repeat(2, 100px);
 
-/* 画面に収まるまで入れる */
-  grid-template-columns: repeat(auto-fill, 100px);
-  grid-template-rows: 100px 100px;
-
-/* 余白 */
-  gap: 20px 40px;
-
-/* 可変 */
-  /* grid-template-columns: 100px 1fr 100px;
-  grid-template-rows: 100px 100px;
-} */
-
-/* ２対１の割合で可変 */
-  /* grid-template-columns: 100px 2fr 1fr;
-  grid-template-rows: 100px 100px;
-} */
-
+  width: 400px;
+  height: 300px;
+  background: #eee;
+/* .containerに対してgridを揃える */
+  justify-content: center;
+  align-content: center;
+/* １つ１つのgridの中の要素を揃える */
+  justify-items: center;
+  align-items: center;
 }
 
+/* divの大きさをgridよりも小さくする */
+.container > div {
+  width: 50px;
+  height: 50px;
+}
 
 .box1 {
   background: hsl(0, 60%, 60%);
+  /* 要素の配置を個別に変えたい場合（この場合、 .box１に対して個別の設定をする） */
+  justify-self: start;
+  align-self: start;
 }
 
 .box2 {
@@ -49,15 +41,11 @@ body {
 }
 
 .box4 {
-  background: hsl(180, 60%, 60%);
+  background: hsl(180, 60%, 60%); 
 }
 
 .box5 {
-  background: hsl(240, 60%, 60%);
-}
-
-.box6 {
-  background: hsl(300, 60%, 60%);
+  background:  hsl(240, 60%, 60%);
 }
 
 
