--- a/MyPortfolio/css/style.css
+++ b/MyPortfolio/css/style.css
@@ -12,8 +12,19 @@ img {
 
 /* 画像との幅をなくす */
 h1,
+h2, 
 p {
   margin: 0;
+}
+
+h1,
+h2 {
+  font-weight: normal;
+}
+
+.container {
+  width: 400px;
+  margin: 0 auto;
 }
 
 /* header */
@@ -23,11 +34,77 @@ header {
 }
 
 header .container {
-  width: 400px;
-  margin: 0 auto;
-  outline: 2px solid red;
+  /* width: 400px;
+  margin: 0 auto; */
+  /* headerがどこまでか分かりやすくするため（目印） */
+  /* outline: 2px solid red; */
+  padding: 32px 0;
+  /* フレックスボックスの設定 (スタイルを整える）*/
+  display: flex;
+  align-items: center;
+}
+
+header .container div + div {
+  margin-left: 32px;
+}
+  
+header h1 {
+  /* font-weight: normal; */
+  font-size: 24px;
+}
+
+header ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+header ul li + li {
+  margin-left: 8px;
+}
+
+header .icon {
+  border-radius: 50%;
 }
 
 /* main */
 
+/* main .container {
+  width: 400px;
+  margin: 0 auto;
+} */
+
+main h1 {
+  font-size: 24px;
+  /* font-weight: normal; */
+  text-align: center;
+  /* padding と margin の違い（こだわりなければpaddingがおすすめ） */
+  /* 枠からはみ出したくない時はmarginを使う */
+  padding: 60px 0;
+  /* margin: 60px 0; */
+  /* background: pink; */
+  /* border-bottom: 1px solid red; */
+}
+
+main h2 {
+  /* font-weight: normal; */
+  font-size: 20px;
+  margin-top: 16px;
+}
+
+main p {
+  line-height: 1.8;
+}
+
+main section + section {
+  margin-top: 60px;
+}
+
 /* footer */
+
+footer {
+  padding: 60px 0;
+  text-align: center;
+  color:  #aaa;
+}
