--- a/JavaScript/My_StopWatch/css/styles.css
+++ b/JavaScript/My_StopWatch/css/styles.css
@@ -1,1 +1,22 @@
-a
+body {
+  font-family: 'Courier New', monospace;
+  font-size: 14px;
+  background: #eee;
+}
+
+.container {
+  margin: 20px auto;
+  width: 270px;
+  background: #fff;
+  padding: 15px;
+  text-align: center;
+}
+
+#timer {
+  background: 20px auto;
+  height: 120px;
+  line-height: 120px;
+  font-size: 40px;
+  margin-bottom: 40px;
+  text-align: center;
+}
