--- a/JavaScript/My_StopWatch/css/styles.css
+++ b/JavaScript/My_StopWatch/css/styles.css
@@ -20,3 +20,22 @@ body {
   margin-bottom: 40px;
   text-align: center;
 }
+
+.btn {
+  width: 80px;
+  height: 45px;
+  line-height: 45px;
+  background: #ddd;
+  font-weight: bold;
+  cursor: pointer;
+  user-select: none;
+}
+
+.controls {
+  display: flex;
+  justify-content: space-between;
+}
+
+.inactive {
+  opacity: 0.6;
+}
