--- a/JavaScript/My_NumbersGame/css/styles.css
+++ b/JavaScript/My_NumbersGame/css/styles.css
@@ -1,1 +1,23 @@
-a
+body {
+  background:  #ccc;
+  color: #fff;
+  font-family: 'Courier New', sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+#container {
+  /* 50pxのパネルが2個 と 10pxの余白が2個 */
+  width: 120px;
+  margin: 16px auto;
+  background: pink;
+}
+
+#board {
+  /* 箇条書きに用いられる「・」を取り除きたい。 */
+  list-style: none;
+  margin: 0;
+  padding: 10px;
+  background: #fff;
+  border-radius: 4px;
+}
